# gtm

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml  gtm.db-shm
.github/workflows/: ci.yml  deploy.yml  release.yml
crates/app/: Cargo.toml  build.rs
crates/app/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/db/tests/: business_logic.rs  constraints.rs  crud.rs
crates/db/tests/common/: mod.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/scraper/: Cargo.toml
crates/scraper/src/: lib.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: main.rs
docs/: auth.md  build-and-deploy.md  schema.md
frontend/: package-lock.json  package.json
frontend/src/: AllocationDashboard.tsx  App.tsx  GameAllocation.tsx  MyAllocations.tsx  MyGames.tsx  MyRequests.tsx  RequestPanel.tsx  SchedulePage.tsx  ScheduleTable.tsx  SeatAdmin.tsx  api.ts  main.tsx  types.ts  useAutoRefresh.ts
infra/: README.md  alb.tf  bastion.tf  database.tf  dns.tf  ecs.tf  iam.tf  logging.tf  main.tf  outputs.tf  secrets.tf  variables.tf  vpc.tf
infra/bootstrap/: main.tf
infra/environments/: prod.tfvars  staging.tfvars
migrations/: 20260226174800_create_seats_table.sql  20260226174801_create_game_tickets_table.sql  20260226230000_create_users_table.sql  20260228000000_create_ticket_requests_table.sql  20260304180000_bool_to_integer.sql  20260321180000_create_user_game_tags_table.sql
migrations-sqlite/: 20260225215216_create_games_table.sql  20260225220038_recreate_games_mirror_api.sql  20260225221802_create_promotions_table.sql  20260225223607_drop_games_description.sql  20260228000000_create_ticket_requests_table.sql  20260228000001_add_assigned_to_game_tickets.sql  20260302180000_drop_users_role.sql  20260304180000_bool_to_integer.sql  20260321180000_create_user_game_tags_table.sql  20260403180000_drop_seats_approved.sql
