[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/config",
    "crates/db",
    "crates/models",
    "crates/scraper",
]

[workspace.package]
version = "0.1.1"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
