[package]
name = "gtm"
version.workspace = true
edition.workspace = true

[dependencies]
gtm-models = { path = "../models" }
gtm-db = { path = "../db" }
gtm-scraper = { path = "../scraper" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
time = { version = "0.3", features = ["macros", "formatting"] }
