[package]
name = "gtm"
version.workspace = true
edition.workspace = true

[dependencies]
gtm-models = { path = "../models" }
gtm-db = { path = "../db" }
gtm-scraper = { path = "../scraper" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
axum = { version = "0.8", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
time = { version = "0.3", features = ["macros", "formatting"] }
