[package]
name = "giants-cli"
version.workspace = true
edition.workspace = true

[dependencies]
giants-models = { path = "../models" }
giants-db = { path = "../db" }
giants-scraper = { path = "../scraper" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
