[package]
name = "gtm-cli"
version.workspace = true
edition.workspace = true

[dependencies]
gtm-models = { path = "../models" }
gtm-db = { path = "../db" }
gtm-scraper = { path = "../scraper" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
