[package]
name = "gtm-server"
version.workspace = true
edition.workspace = true

[dependencies]
gtm-models = { path = "../models" }
gtm-db = { path = "../db" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
